[workspace]
members = [
  "portal_renderer",
  "portal_editor",
  "portal_common"
]
resolver = "2"

[workspace.dependencies]
bevy = "0.10.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true #Change this to be per platform windows doesn't seem to like it
