[package]
name = "portal_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version="0.10.1" }
bevy_egui = "0.20.3"
bevy_prototype_debug_lines = "0.10.1"
itertools = "0.10.5"
portal_common = {path="../portal_common"}
