[package]
name = "portal_renderer"
version = "0.1.0"
edition = "2021"
default-run = "portal_renderer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version="0.10.1" }
# bevy_pixels = {version="0.10.0", features=["wayland"]}
bevy_pixel_buffer = {version="0.4", features=["rayon", "egui"]}
portal_common = {path="../portal_common"}
rand = "0.8.5"
